syntax="proto3";

package com.grpc.server.service;

message PrintMessageRequest{
  string message=1;
}

message ServerResponse{
  string serverResponse = 2;
}

service PrintMessageService{
  rpc PrintMessage (PrintMessageRequest) returns (ServerResponse){}
}